# garnix-ci-selfhosted

./: .gitattributes  .gitignore  .hlint.yaml  .sops.yaml  LICENSE  README.md  cabal.project  flake.nix  garnix.yaml  justfile
backend/: .gitignore  .hlint.yaml  cabal.project  default.nix  dev-action-runner-ssh-key  dev-key.jwt  fod-crates-proxy.py  garnix.cabal  nixos-module-monitoring-environment-check.nix  nixos-module.nix  package.yaml  ssh-key-for-tests  ssh-key-for-tests.pub  test_cabal_install.py  test_fod_crates_proxy.py
backend/.golden/: .gitignore  FeatureFlagConfigDbo.json
backend/exe/: GenerateYamlConfigDocs.hs  Server.hs  convertHashids.hs
backend/src/: Garnix.hs
dns/: Cargo.toml  default.nix  nixos-module.nix
dns/src/: dns.rs  main.rs  test_helpers.rs
docs/: authentik-cookbook.md  web-terminal.md
examples/: default.nix  example-multi-server-deployment.nix
frontend/: .eslintrc.json  .gitignore  default.nix  jest-wasm-mock.js  jest.config.ts  knip.json  next.config.js  package-lock.json  package.json  tsconfig.json
hosting-gateway/: default.nix  nixos-module.nix
nix/: treefmt.nix
nix/modules/: common.nix  (+11 more)
opensearch/: default.nix  nixos-module.nix
provisioner/: authentik-guard.nix  authentik_provision.py  default.nix  guest-profile.nix  hosting-public-key.pub  nixos-module.nix  provisionerd.py  test_authentik_provision.py  test_provisionerd_ports.py
secrets/: backend-specs-github-app.age  dev.yaml
sql/: README.md  local-fixtures.sql  sqitch.plan
watchdog/: cabal.project  default.nix  nixos-module.nix  package.yaml  watchdog.cabal
(+523 files in other folders)
