[package]
name = "dns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
hickory-server = "0.24.0"
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = "1.35.1"

[dev-dependencies]
hickory-client = "0.24.0"
httpmock = "0.7.0"
pretty_assertions = "1.4.0"
serde_json = "1.0.115"
